# pocket-lc

./: CMakeLists.txt  README.md
src/: audio.c  audio.h  editor.c  editor.h  main.c  parser.c  parser.h
src/libs/: soundio.h
